# coinchat

./: README.md
coinchat_backend_channels/: .gitignore  .python-version  Dockerfile  checker.py  db.sqlite3  manage.py  pyproject.toml  redis_to_ssd.py  trade_checker.py
coinchat_backend_channels/coinchat_backend_channels/: asgi.py  settings.py  urls.py  wsgi.py
coinchat_backend_channels/web_socket/: consumers.py  routing.py
coinchat_frontend_vue/: Dockerfile  README.md  components.d.ts  default.conf  index.html  local_data_server.bat  package-lock.json  package.json  renew_symbol_list.py  symbol_list.json  tsconfig.json
coinchat_frontend_vue/src/: App.vue  main.ts
coinchat_frontend_vue/src/components/: Left_Bar.vue  Main_Page.vue  Mobile_Header.vue
coinchat_frontend_vue/src/components/Chatting/: Chatting.vue  Chatting_Input.vue
coinchat_frontend_vue/src/components/Main_Sub_Component/: Change_Rate_Per_Time.vue  Chart.vue  Rapid_Change.vue  Trade_Checker.vue  indicators.json  symbol_list.json
coinchat_frontend_vue/src/router/: index.ts
coinchat_frontend_vue/src/stores/: global_store.ts  websocket_store.ts
