[tool.poetry]
name = "coinchat-backend-channels"
version = "0.1.0"
description = ""
authors = ["na3351 <60381226+na3351@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
django = "^5.0"
channels = "^4.0.0"
channels-redis = "^4.1.0"
daphne = "^4.0.0"
ccxt = "2.4.101"
redis = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
